distros/N/Net-Amazon-S3/lib/Shared/Examples/Net/Amazon/S3/Fixture/error/invalid_object_state.pm
# PODNAME: Shared::Examples::Net::Amazon::S3::Fixture::error::invalid_object_state
# ABSTRACT: Shared::Examples providing error fixture

use strict;
use warnings;

use HTTP::Status;
use Shared::Examples::Net::Amazon::S3::Fixture;

Shared::Examples::Net::Amazon::S3::Fixture::error_fixture
	InvalidObjectState => HTTP::Status::HTTP_FORBIDDEN,
	q<The operation is not valid for the object's storage class>,
	;

__END__

=pod

=encoding UTF-8

=head1 NAME

Shared::Examples::Net::Amazon::S3::Fixture::error::invalid_object_state - Shared::Examples providing error fixture

=head1 VERSION

version 0.99

=head1 AUTHOR

Branislav Zahradník <barney@cpan.org>

=head1 COPYRIGHT AND LICENSE

This software is copyright (c) 2021 by Amazon Digital Services, Leon Brocard, Brad Fitzpatrick, Pedro Figueiredo, Rusty Conover, Branislav Zahradník.

This is free software; you can redistribute it and/or modify it under
the same terms as the Perl 5 programming language system itself.

=cut
